--- a/Practice/BootstrapTask/index.html
+++ b/Practice/BootstrapTask/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onder</title>
     <link rel="stylesheet" href="Style/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
@@ -20,7 +26,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <h2>ONEDER</h2>
+                <div class="montserrat-title-font theme-color">ONEDER</div>
             </a>
             <div class="collapse navbar-collapse ml-auto" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-3 mt-2 mt-lg-0 ms-auto">
@@ -51,24 +57,27 @@
     <!--Navigation Bar Code ends.. -->
     <div class="container-fluid full-screen-bg d-flex justify-content-center align-items-center">
         <div class="row content-overlay text-center">
-            <h1>I'M CRETIVE ONE PAGE</h1><BR>
-            <h1>TEMPLATE BY COLORLIB</h1> <br>
-            <a class="px-3 py-2 get-in-touch mt-2 " href="#">Get in Touch</a>
+            <div class="col-sm-12">
+                <h1>I'M CRETIVE ONE PAGE <BR> TEMPLATE BY COLORLIB</h1>
+                    <br>
+                    <a class="px-3 py-2 get-in-touch" href="#">Get in Touch</a>
+            </div>
+            
         </div>
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row  mt-5 mb-5">
             <div class="col px-5 py-5 ">
-                <p class="text-center h2 subtitle">About Oneder</p>
+                <p class="text-center montserrat-title-font" style="color: #007bff;">About Oneder</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row  mt-5 mb-5">
             <div class="col-sm-6 ">
-                <img class="img-fluid" src="Images/roller3.jpg" alt="Not supported">
+                <img class="img-fluid p-3" src="Images/roller3.jpg" alt="Not supported">
             </div>
-            <div class="col-sm-6 px-5 py-5">
-                <h2>For the next great business</h2>
+            <div class="col-sm-6 side-content">
+                <p class="about-size-title">For the next great business</p>
                 <p class="silver-color">Lorem ipsum aoor sit amet consectetur adipisicing elit. Quo tempora cumque
                     eligendi in nostrum Lahore omnis quaerat.</p>
                 <ul class="side-list silver-color">
@@ -76,103 +85,111 @@
                     <li><span class="tick">&#x2713</span> Possimus aut conscquuntur incidunt</li>
                     <li><span class="tick">&#x2713</span> Lorem ipsum dolor sit amet</li>
                     <li><span class="tick">&#x2713</span> Consectetur adipisicing elit</li>
-                </ul>
+                </ul> <br>
                 <a class="px-3 py-2 get-in-touch" href="#">Get in Touch</a>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="row text-center px-5 py-5">
-            <p class="h2 subtitle">Our Team</p>
-            <p class="h5 justify-content-center" style="color: #A8A9AD;">Lorem ipsum aoor sit amet consectetur
-                adipisicing elium aoor sit amet consectetur adipisicing elit. Quo tempora cumque eligendi in nostrum
-                Lahore omnis quaerat. </p>
+    <div class="container  mt-5 mb-5">
+        <div class="row text-center px-5 py-5 ">
+            <p class="subtitle montserrat-title-font" style="color: #007bff;">Our Team</p>
+            <p class="h5 justify-content-center py-2 px-5" style="color: #A8A9AD;line-height: 30px;">Lorem ipsum aoor sit amet consectetur
+                adipisicing elium aoor sit amet consectetur adipisicing elit. </p>
         </div>
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row  mt-5 mb-5">
             <div class="col-sm-3">
                 <img class="img-fluid" src="Images/prof3.jpg" alt="Not supported">
-                <div class="description px-5 py-5">
-                    <p>Kaiara Spencer</p>
-                    <p>Product Manager</p>
+                <div class="description px-3 py-3">
+                    <p class="Manager-name">Kaiara Spencer</p>
+                    <p class="designation">Product Manager</p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <img class="img-fluid" src="Images/prof2.jpg" alt="Not supported">
-                <div class="description px-5 py-5">
-                    <p>Dave Simpson</p>
-                    <p>Product Manager</p>
+                <div class="description px-3 py-3">
+                    <p class="Manager-name">Dave Simpson</p>
+                    <p class="designation">Product Manager</p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <img class="img-fluid" src="Images/prof5.jpg" alt="Not supported">
-                <div class="description px-5 py-5">
-                    <p>Ben Thomson</p>
-                    <p>Product Manager</p>
+                <div class="description px-3 py-3">
+                    <p class="Manager-name">Ben Thomson</p>
+                    <p class="designation">Product Manager</p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <img class="img-fluid" src="Images/prof4.jpg" alt="Not supported">
-                <div class="description px-5 py-5">
-                    <p>Kyla Stewert</p>
-                    <p>Product Manager</p>
+                <div class="description px-3 py-3">
+                    <p class="Manager-name">Kyla Stewert</p>
+                    <p class="designation">Product Manager</p>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container-fluid contact-us">
-        <div class="container ">
-            <div class="row text-center px-5 py-5">
-                <div class="col h2 subtitle">Contact Us</div>
+        <div class="container">
+            <div class="row text-center ">
+                <div class="col montserrat-title-font" style="color: #007bff;">Contact Us</div>
             </div>
-            <div class="row mb-5">
+            <div class="row mb-5 mt-5">
                 <div class="col-sm-4 text-center">
-                    <p>203, Lake Mountain View, San Francisco, California, USA</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-geo-alt-fill theme-color" viewBox="0 0 16 16">
+                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                      </svg>
+                    <p class="py-1 silver-color contact-us-text">203, Lake Mountain View, San Francisco, California, USA</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <p>+1 232 3235 324</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-telephone theme-color" viewBox="0 0 16 16">
+                        <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+                      </svg>
+                    <p class="py-1 theme-color contact-us-text">+1 232 3235 324</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <p>yourmail@domain.com</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-envelope theme-color" viewBox="0 0 16 16">
+                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                      </svg>
+                    <p class="py-1 theme-color contact-us-text">yourmail@domain.com</p>
                 </div>
             </div>
         </div>
 
-        <div class="container bg-light px-5 py-5 mb-5">
+        <div class="container contact-form px-5 py-5">
             <div>
-                <p>Contact Form</p>
+               <h4>Contact Form</h4>
             </div>
             <form action="">
                 <div class="row">
                     <div class="col-sm-6 px-3 py-3">
                         <label for="firstName" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name">
+                        <input type="text" class="form-control rounded-pill" id="firstName">
                     </div>
                     <div class="col-sm-6 px-3 py-3">
                         <label for="lastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="LastName" placeholder="Enter your last name">
+                        <input type="text" class="form-control rounded-pill" id="LastName">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col px-3 py-3">
                         <label for="email" class="form-label">Email</label>
-                        <input type="text" class="form-control" id="email" placeholder="Enter your email address">
+                        <input type="text" class="form-control rounded-pill" id="email">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col px-3 py-3">
                         <label for="subject" class="form-label">Subject</label>
-                        <input type="text" class="form-control" id="subject" placeholder="Enter your subject">
+                        <input type="text" class="form-control rounded-pill" id="subject">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col px-3 py-3">
-                        <label for="message-area" class="form-label">Subject</label>
-                        <input type="text" class="form-control" id="message-area" placeholder="Enter your message">
+                        <label for="exampleFormControlTextarea1">Message</label>
+                        <textarea class="form-control custom-input" id="exampleFormControlTextarea1" rows="5" placeholder="Write your notes or questions here..."></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -182,17 +199,17 @@
         </div>
     </div>
 
-    <div class="container-fluid bg-light">
-        <div class="container">
+    <!----------------footer starts from here ---------------->
+
+    <div class="container-fluid footer">
+        <div class="container silver-color">
             <div class="row">
-                <div class="col-sm-6 p-5 ">
-                    <h5>About Us</h5>
-                    <p style="max-width: 80%;">Lorem ipsum aoor sit amet consectetur adipisicing elit. Quo tempora
-                        cumque eligendi in nostrum
-                        Lahore omnis quaerat.</p>
+                <div class="col-sm-6 p-5">
+                    <h5 class="text-light">About Us</h5>
+                    <p style="max-width: 80%;">Lorem ipsum aoor sit amet consectetur adipisicing elit. Quo tempora cumque eligendi in nostrum Lahore omnis quaerat.</p>
                 </div>
                 <div class="col-sm-3 p-5">
-                    <h5>Quick Links</h5>
+                    <h5 class="text-light">Quick Links</h5>
                     <ul class="side-list">
                         <li>About Us</li>
                         <li>Services</li>
@@ -201,24 +218,24 @@
                     </ul>
                 </div>
                 <div class="col-sm-3 p-5">
-                    <h5>Follow Us</h5>
+                    <h5 class="text-light">Follow Us</h5>
                     <ul class="side-list">
-                        <li class="pe-3 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        <li class="pe-4 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path
                                     d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
                             </svg></li>
-                        <li class="pe-3 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        <li class="pe-4 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
                                 <path
                                     d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15" />
                             </svg></li>
-                        <li class="pe-3 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        <li class="pe-4 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                                 <path
                                     d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
                             </svg></li>
-                        <li class="pe-3 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        <li class="pe-4 d-inline"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                                 <path
                                     d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
@@ -226,7 +243,12 @@
                     </ul>
                 </div>
             </div>
-            
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <p class="text-center silver-color p-4">Copyright &copy2024 All reserved | This template is made with <span class="text-danger h5">&#9829</span> by Colorlib</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
